--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
 </head>
 <body>
   <h1>🎁 NFT Рулетка 🎁</h1>
+
+  <!-- Изображение будет вставляться через JS -->
   <div id="roulette">Готов?</div>
   <button onclick="startRoulette()">Запустить!</button>
 
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script>
     const prizes = [
-      "NFT Котик 🐱",
+      '<img src="cat.jpg" alt="NFT Котик" width="100" />', // заменили текст на изображение
       "NFT Робот 🤖",
       "NFT Самурай 🗡️",
       "NFT Единорог 🦄",
@@ -57,7 +59,7 @@
       if (rouletteInterval) clearInterval(rouletteInterval);
 
       rouletteInterval = setInterval(() => {
-        document.getElementById('roulette').innerText = prizes[Math.floor(Math.random() * prizes.length)];
+        document.getElementById('roulette').innerHTML = prizes[Math.floor(Math.random() * prizes.length)];
         counter++;
         if (counter > 20) { // через ~2 секунды остановка
           clearInterval(rouletteInterval);
