--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <h1>🎁 NFT Рулетка 🎁</h1>
 
   <!-- Изображение будет вставляться через JS -->
-  <div id="roulette">Готов?</div>
+  <div id="roulette">Готов? ввв</div>
   <button onclick="startRoulette()">Запустить!</button>
 
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
