--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </style>
 </head>
 <body>
-  <h1>🎁 NFT Рулетка 🎁</h1>
+  <h1>🎁 NFT Рулетка 🎁ы</h1>
 
   <!-- Изображение будет вставляться через JS -->
   <div id="roulette">Готов? ввв</div>
