--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
   </style>
 </head>
 <body>
-  <h1>🎁 NFT Рулетка 🎁ы</h1>
+  <h1>🎁 NFT Рулетка 🎁</h1>
 
   <!-- Изображение будет вставляться через JS -->
-  <div id="roulette">Готов? ввв</div>
+  <div id="roulette">Готов?</div>
   <button onclick="startRoulette()">Запустить!</button>
 
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
