--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script>
     const prizes = [
-      '<img src="cat.jpg" alt="NFT Котик" width="100" />', // заменили текст на изображение
+      '<img src='https://pbs.twimg.com/media/GiS7CqWXMAA8KMN.jpg>'
       "NFT Робот 🤖",
       "NFT Самурай 🗡️",
       "NFT Единорог 🦄",
