--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         counter++;
         if (counter > 20) { // через ~2 секунды остановка
           clearInterval(rouletteInterval);
-          // можно добавить звук победы или анимацию
+          // можно добавить звук победы или анимацию-
         }
       }, 100);
     }
