--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
       overflow: hidden;
       height: 300px;
       margin-top: 60px;
-      background: #fff;
     }
     #roulette {
       display: flex;
-      align-items: center;
       will-change: transform;
+      transition: transform 10s ease-out;
     }
     .item {
       min-width: 300px;
@@ -114,6 +113,11 @@
     <div class="item"><img src="https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3BlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ"></div>
     <div class="item"><img src="https://media.tproger.ru/uploads/2025/02/a090bfe6-b31e-4c73-a991-9d4b01dff329.jpg"></div>
     <div class="item"><img src="https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3BlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ"></div>
+    <!-- Дублируем элементы для бесконечности -->
+    <div class="item"><img src="https://media.tproger.ru/uploads/2025/02/a090bfe6-b31e-4c73-a991-9d4b01dff329.jpg"></div>
+    <div class="item"><img src="https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3BlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ"></div>
+    <div class="item"><img src="https://media.tproger.ru/uploads/2025/02/a090bfe6-b31e-4c73-a991-9d4b01dff329.jpg"></div>
+    <div class="item"><img src="https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3BlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ"></div>
   </div>
 </div>
 
@@ -130,37 +134,34 @@
 <script>
   const prizes = [
     "https://media.tproger.ru/uploads/2025/02/a090bfe6-b31e-4c73-a991-9d4b01dff329.jpg",
-    "https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3BlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ",
+    "https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3PlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ",
     "https://media.tproger.ru/uploads/2025/02/a090bfe6-b31e-4c73-a991-9d4b01dff329.jpg",
-    "https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3BlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ",
+    "https://i.getgems.io/NzU_WpEetL8daGnbSRVDEegF_IpTiIdHh61PVmfFQj8/rs:fill:500:500:1/g:ce/czM6Ly9nZXRnZW1zLXMzL25mdC1jb250ZW50LWNhY2hlL2ltYWdlcy9FUUJHLWc2YWhrQVVHV3PlZldieC1EXzlzUThvV2J2eTZwdXVxNzhVMmM0TlVERlMvODZlNGFkMDUzODNhNTc2Zl8xOTRhOTZjMTdmNQ",
   ];
 
   let rouletteInterval;
   let isSpinning = false;
   let cooldown = false;
-  let cooldownTime = 10; // Таймер на 10 секунд
+  let cooldownTime = 10;
 
   function startRoulette() {
-    if (cooldown || isSpinning) return; // Предотвращаем многократное нажатие кнопки
+    if (cooldown || isSpinning) return;
     isSpinning = true;
     document.getElementById("spin-button").disabled = true;
 
     let roulette = document.getElementById("roulette");
     let randomIndex = Math.floor(Math.random() * prizes.length);
-    let offset = -300; // Начальное смещение
-    let rotations = 20; // Количество поворотов
-    let duration = 7000; // Время крута (7 секунд)
+    let offset = -300;
+    let rotations = 20;
+    let duration = 7000;
 
-    // Запуск рулетки
     roulette.style.transition = "transform " + duration + "ms ease-out";
     roulette.style.transform = `translateX(${offset * rotations}px)`;
 
     setTimeout(() => {
-      // Выбор победного изображения
       document.getElementById("winning-image").src = prizes[randomIndex];
       document.getElementById("overlay").style.display = "flex";
       
-      // Таймер на 10 секунд перед новым спином
       cooldown = true;
       let countdownTimer = setInterval(() => {
         document.getElementById("cooldown").textContent = `Вы сможете крутить снова через: ${cooldownTime} секунд`;
@@ -170,19 +171,18 @@
           cooldown = false;
           document.getElementById("cooldown").textContent = "";
           document.getElementById("spin-button").disabled = false;
-          cooldownTime = 10; // Сброс таймера
+          cooldownTime = 10;
         }
       }, 1000);
     }, duration);
 
-    // Показываем указатель
     document.getElementById("pointer").style.display = "block";
   }
 
   function resetRoulette() {
     document.getElementById("overlay").style.display = "none";
     let roulette = document.getElementById("roulette");
-    roulette.style.transition = "none"; // Сбрасываем переходы
+    roulette.style.transition = "none";
     roulette.style.transform = "translateX(0px)";
     isSpinning = false;
     document.getElementById("spin-button").disabled = false;
@@ -191,6 +191,3 @@
 
 </body>
 </html>
-
-</html>
-
