--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     #roulette-container {
       position: relative;
       width: 100%;
-      overflow: hidden;
       height: 300px;
       margin-top: 60px;
+      background: transparent;
+      overflow: hidden;
     }
     #roulette {
       display: flex;
-      will-change: transform;
-      transition: transform 10s ease-out;
       flex-wrap: nowrap;
-      animation: roll 10s linear infinite;
+      will-change: transform;
+      animation: roll 12s linear infinite;
     }
     @keyframes roll {
       0% {
@@ -37,16 +37,15 @@
       }
     }
     .item {
-      min-width: 300px;
-      margin: 0 10px;
+      min-width: 1600px;
+      margin: 0;
       flex-shrink: 0;
     }
     .item img {
-      width: 300px;
+      width: 1600px;
       height: 300px;
       object-fit: cover;
       border-radius: 20px;
-      background: transparent;
     }
     button {
       margin-top: 30px;
@@ -159,7 +158,7 @@
     let randomIndex = Math.floor(Math.random() * prizes.length);
 
     // Старт прокрутки
-    roulette.style.transition = "transform 10s ease-out";
+    roulette.style.transition = "transform 12s ease-out";
     roulette.style.transform = `translateX(-100%)`;
 
     // Остановка рулетки с плавным эффектом
@@ -179,7 +178,7 @@
           document.getElementById("cooldown").textContent = "";
         }
       }, 1000);
-    }, 10000); // Рулетка будет крутиться 10 секунд
+    }, 12000); // Рулетка будет крутиться 12 секунд
   }
 
   function resetRoulette() {
@@ -193,4 +192,3 @@
 
 </body>
 </html>
-
